--- a/ReactNative2024/02-MyFirstApp/package.json
+++ b/ReactNative2024/02-MyFirstApp/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "18.2.0",
-    "react-native": "0.74.4"
+    "react-native": "0.74.4",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
