--- a/ReactNative2024/04-NavigationApp/package.json
+++ b/ReactNative2024/04-NavigationApp/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0"
   },
