--- a/ReactNative2024/04-NavigationApp/package.json
+++ b/ReactNative2024/04-NavigationApp/package.json
@@ -13,14 +13,18 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-pager-view": "^6.3.3",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +35,7 @@
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
