--- a/ReactNative2024/11-productsApp/package.json
+++ b/ReactNative2024/11-productsApp/package.json
@@ -15,9 +15,11 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@tanstack/react-query": "^5.59.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
