--- a/ReactNative2024/11-productsApp/package.json
+++ b/ReactNative2024/11-productsApp/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.75.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
